Remove sidecar + fixup ingress